apps/dssp-python-test-7/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-python-test-7
  labels:
    backstage.io/kubernetes-id: dssp-python-test-7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-python-test-7
  template:
    metadata:
      labels:
        app: dssp-python-test-7
        backstage.io/kubernetes-id: dssp-python-test-7
    spec:
      containers:
        - name: dssp-python-test-7
          image: chaitanyapandeygspann/dssp-python-test-7:1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
