apps/dssp-python-test-7/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-python-test-7
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /dssp-python-test-7
            pathType: Prefix
            backend:
              service:
                name: dssp-python-test-7
                port:
                  number: 80
